[package]
name = "celestia-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
celestia-rpc = {git = "https://github.com/eigerco/lumina"}
celestia-types = { git = "https://github.com/eigerco/lumina" }
hex = "0.4"
k256 = "0.10"
dotenv = "0.15.0"
foundry = "0.3.0"
ethers = { version = "2.0.4", features = ["ws"] }